Fix saving of state config if one has autosave enabled

BUG: 451725